# NeoRust

./: ._.cursor  ._.cursorignore  ._.gitattributes  ._.github  ._.gitignore  ._.windsurfrules  ._CHANGELOG.md  ._COPYRIGHT  ._Cargo.toml  ._IMPLEMENTATION_STATUS.md  ._LICENSE-MIT  ._README.md  ._assets  ._build.rs  ._compose-dev.yaml  ._deny.toml  ._examples  ._fix_brackets.py  ._neo-cli  ._rust-toolchain.toml  ._scripts  ._tests  ._website  .cursorignore  .gitattributes  .gitignore  API_GUIDELINES.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_STATUS.md  PRODUCTION_STATUS.md  PROJECT_STRUCTURE.md  README.md  VERIFICATION_GUIDE.md  WORKSPACE_REORGANIZATION.md  deny.toml  fix_brackets.py  tauri.conf.json  test_verification  (+1 more)
neo-gui/: ._.audit-ci.json  ._.eslintrc.js  ._.husky  ._.lintstagedrc.json  ._.npmrc  ._.prettierrc  ._COMPLETE_PRODUCTION_ANALYSIS.md  ._Cargo.toml  ._IMPLEMENTATION_GUIDE.md  ._PRODUCTION_COMPLETE.md  ._PRODUCTION_READINESS.md  ._README.md  ._TESTING.md  ._TROUBLESHOOTING.md  ._build.rs  ._coverage  ._dist  ._e2e  ._eslint.config.js  ._gen  ._icons  ._index.html  ._jest.config.js  ._node_modules  ._package-lock.json  ._package.json  ._playwright-report  ._playwright.config.ts  ._postcss.config.js  ._tailwind.config.js  ._test-results  ._tsconfig.json  ._tsconfig.node.json  ._vite.config.ts  .audit-ci.json  .eslintrc.js  .lintstagedrc.json  .npmrc  .prettierrc  BACKEND_TESTING.md  (+19 more)
neo-gui/.cargo/: config.toml
neo-gui/.husky/: ._pre-commit  pre-commit
neo-gui/benches/: ._performance_benchmarks.rs
neo-gui/coverage/: ._base.css  ._src  (+9 more)
(+1370 files in other folders)
