[package]
name = "neo-gui"
version = "0.2.3"
edition = "2021"
description = "Modern GUI application for the NeoRust SDK"
authors = ["R3E Network (c) 2020-2025"]
license = "MIT"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
neo3 = { path = "..", version = "0.2.3" }
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
async-trait = "0.1"
log = "0.4"
env_logger = "=0.11.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]